k8s/portfolio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  labels:
    app: portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        image: gcr.io/portfolio-239904/github.com/hashcacher/portfolio:97bae09c4c8ac13f360a377078c53c6c2418d565
        ports:
        - containerPort: 3001

---

kind: Service
apiVersion: v1
metadata:
  name: portfolio
spec:
  selector:
    app: portfolio
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
